# ferrisfuzz

./: BENCHMARKS.MD  Cargo.toml  README.md  changelog.md  pyproject.toml
.github/workflows/: CI.yml
ferrisfuzz-core/: Cargo.toml  README.MD  README.md
ferrisfuzz-core/benches/: bench_autopsy.py  bench_batch.py  bench_damerau.py  bench_damerau.rs  bench_jaro.py  bench_jaro_opt.py  bench_rapidfuzz.py  benches.rs  benches_batch.rs  benches_bp.rs  benches_rf.rs  distance.rs  python_bench.py  rust_bench.rs
ferrisfuzz-core/src/: common.rs  damerau.rs  damerau_batch.rs  damerau_bp.rs  jaro_winkler.rs  jaro_winkler_batch.rs  jaro_winkler_classic.rs  jaro_winkler_opt.rs  levenshtein.rs  levenshtein_batch.rs  levenshtein_bp.rs  lib.rs  myers.rs
ferrisfuzz-core/tests/: test_gate.rs
py/: Cargo.toml  README.MD  README.md
py/src/: lib.rs
tests/: smoke_test.py
