[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "ferrisfuzz"
requires-python = ">=3.8"
description = "Fast Rust string similarity: Levenshtein, OSA, Jaro-Winkler, bit-parallel"
readme = "py/README.md"
authors = [{ name = "Ecaco" }]
license = "MIT OR Apache-2.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/Ecaco/ferrisfuzz"

[tool.maturin]
manifest-path = "py/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]