[package]
name = "ferrisfuzz-core"
version = "0.1.1"
edition = "2024"
description = "Fast no_std string similarity: Levenshtein, OSA, Jaro-Winkler, bit-parallel, zero deps"
readme = "README.md"
repository= "https://github.com/Ecaco/ferrisfuzz"
license = "MIT OR Apache-2.0"
keywords = ["levenshtein", "jaro-winkler", "no_std", "similarity", "text-processing"]

[[bench]]
name = "rust_bench"
harness = false

[dev-dependencies]
rapidfuzz ="0.5"
criterion = { version = "0.5.1", features = ["html_reports"]}
rand = "0.8"