[package]
name = "py"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Fast Rust string similarity: Levenshtein, OSA, Jaro-Winkler, bit-parallel"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ecaco/ferrisfuzz"

[dependencies]
ferrisfuzz-core = { path = "../ferrisfuzz-core"}
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py38"] }

[lib]
crate-type = ["cdylib"]
